jerry-core/parser/js/new-parser/tests/js/object-literal-get.js.expected

--- Script parsing start ---

  [  1] CBC_CREATE_OBJECT

--- Function parsing start ---


--- Script parsing end ---

Parse error 'Property getters must have no arguments.' at line: 3 col: 24
