jerry-core/parser/js/new-parser/tests/js/object-literal-get.js
/* This test contains object literal parser tests. */

var a = { get get(arg) {} }
